Bug 182334 - Digikam always crash when I try to move the Toolbar
Summary: Digikam always crash when I try to move the Toolbar
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ProgressManager-Engine (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-29 20:03 UTC by Adrien BIGOT
Modified: 2017-08-23 09:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrien BIGOT 2009-01-29 20:03:00 UTC
Version:           0.10.0-rc2 (rev.: 917991) (using 4.2.00 (KDE 4.2.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.27-11-generic

When I try to move the Toolbar Menu Digikam Crash !

digiKam
Version 0.10.0-rc2 (rev.: 917991)
Using KDE 4.2.00 (KDE 4.2.0)


Bellow, two backtraces :

###########################
First Time it crashes :
###########################


Application : digiKam (digikam), signal SIGABRT
[Current thread is 0 (LWP 3677)]

Thread 10 (Thread 0xb3249b90 (LWP 3678)):
#0  0xb7fff430 in __kernel_vsyscall ()
#1  0xb54a2075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb55a19ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb57a36f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0x082ce7b9 in Digikam::ScanController::run (this=0xa452428) at /home/cousteau/down/svn/graphics/digikam/digikam/scancontroller.cpp:412
#5  0xb57a26ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb549e50f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb55937ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 9 (Thread 0xb1ed7b90 (LWP 3681)):
#0  0xb7fff430 in __kernel_vsyscall ()
#1  0xb54a2075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb55a19ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb57a36f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71fe8a5 in Digikam::LoadSaveThread::run (this=0xa770478) at /home/cousteau/down/svn/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0xb57a26ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb549e50f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb55937ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 8 (Thread 0xb2711b90 (LWP 3682)):
#0  0xb7fff430 in __kernel_vsyscall ()
#1  0xb54a2075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb55a19ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb57a36f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71fe8a5 in Digikam::LoadSaveThread::run (this=0xa8766c0) at /home/cousteau/down/svn/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0xb57a26ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb549e50f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb55937ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 7 (Thread 0xaf75ab90 (LWP 3683)):
#0  0xb7fff430 in __kernel_vsyscall ()
#1  0xb54a23a2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb55a1a44 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xafff567f in ?? () from /usr/lib/libxine.so.1

Thread 6 (Thread 0xaeabfb90 (LWP 3684)):
#0  0xb7fff430 in __kernel_vsyscall ()
#1  0xb558bc01 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0xb0021580 in xine_usec_sleep () from /usr/lib/libxine.so.1
#3  0x00000000 in ?? ()

Thread 5 (Thread 0xae2beb90 (LWP 3685)):
#0  0xb54a108b in __pthread_mutex_unlock_usercnt () from /lib/tls/i686/cmov/libpthread.so.0
#1  0xb55a1bf6 in pthread_mutex_unlock () from /lib/tls/i686/cmov/libc.so.6
#2  0xb4c2b5f6 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#3  0xb4c2ba8a in ?? () from /usr/lib/libglib-2.0.so.0
#4  0xb4c2bf61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0xb58bd497 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#6  0xb589152a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#7  0xb58916ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#8  0xb579f419 in QThread::exec () from /usr/lib/libQtCore.so.4
#9  0xb0045512 in ?? () from /usr/lib/kde4/plugins/phonon_backend/phonon_xine.so
#10 0xb57a26ae in ?? () from /usr/lib/libQtCore.so.4
#11 0xb549e50f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#12 0xb55937ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 4 (Thread 0xada9bb90 (LWP 3688)):
#0  0xb55d2c88 in ?? () from /lib/tls/i686/cmov/libc.so.6
#1  0xb020f9cd in snd_ctl_read () from /usr/lib/libasound.so.2
#2  0xb020bd9f in snd_hctl_handle_events () from /usr/lib/libasound.so.2
#3  0xb0217ea1 in snd_mixer_handle_events () from /usr/lib/libasound.so.2
#4  0xaeee4fe4 in ?? () from /usr/lib/xine/plugins/1.24/xineplug_ao_out_alsa.so
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 3 (Thread 0xad258b90 (LWP 3689)):
#0  0xb7fff430 in __kernel_vsyscall ()
#1  0xb54a2075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb55a19ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb0007843 in ?? () from /usr/lib/libxine.so.1
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 2 (Thread 0xac9bcb90 (LWP 3704)):
#0  0xb7fff430 in __kernel_vsyscall ()
#1  0xb54a2075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb55a19ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb57a36f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71fe8a5 in Digikam::LoadSaveThread::run (this=0xca6e600) at /home/cousteau/down/svn/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0xb57a26ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb549e50f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb55937ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb47976c0 (LWP 3677)):
[KCrash Handler]
#6  0xb7fff430 in __kernel_vsyscall ()
#7  0xb54dd880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb54df248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb579a795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb579a872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb579a915 in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb722e2c4 in Digikam::DLogoAction::createWidget (this=0xd46bb98, parent=0xd8e05d0) at /home/cousteau/down/svn/graphics/digikam/libs/widgets/common/dlogoaction.cpp:160
#13 0xb5dbab12 in QWidgetAction::requestWidget () from /usr/lib/libQtGui.so.4
#14 0xb6131edf in QMenu::actionEvent () from /usr/lib/libQtGui.so.4
#15 0xb5db5b2b in QWidget::event () from /usr/lib/libQtGui.so.4
#16 0xb61382e9 in QMenu::event () from /usr/lib/libQtGui.so.4
#17 0xb5d5d8ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#18 0xb5d657fa in QApplication::notify () from /usr/lib/libQtGui.so.4
#19 0xb687d06d in KApplication::notify () from /usr/lib/libkdeui.so.5
#20 0xb5892e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#21 0xb5da8181 in QWidget::insertAction () from /usr/lib/libQtGui.so.4
#22 0xb5da82cc in QWidget::addAction () from /usr/lib/libQtGui.so.4
#23 0xb6179916 in QToolBarLayout::layoutActions () from /usr/lib/libQtGui.so.4
#24 0xb6179fdf in QToolBarLayout::setGeometry () from /usr/lib/libQtGui.so.4
#25 0xb5d8b22c in QLayoutPrivate::doResize () from /usr/lib/libQtGui.so.4
#26 0xb5d8c931 in QLayout::widgetEvent () from /usr/lib/libQtGui.so.4
#27 0xb5d5d8b7 in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#28 0xb5d657fa in QApplication::notify () from /usr/lib/libQtGui.so.4
#29 0xb687d06d in KApplication::notify () from /usr/lib/libkdeui.so.5
#30 0xb5892e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#31 0xb5deeb6e in QWidgetPrivate::setGeometry_sys () from /usr/lib/libQtGui.so.4
#32 0xb5db0629 in QWidget::resize () from /usr/lib/libQtGui.so.4
#33 0xb5db1ba7 in QWidget::setMinimumSize () from /usr/lib/libQtGui.so.4
#34 0xb5d8b598 in QLayout::activate () from /usr/lib/libQtGui.so.4
#35 0xb6174cd2 in QToolBar::setOrientation () from /usr/lib/libQtGui.so.4
#36 0xb610a1e2 in ?? () from /usr/lib/libQtGui.so.4
#37 0xb6111b3d in ?? () from /usr/lib/libQtGui.so.4
#38 0xb6175206 in ?? () from /usr/lib/libQtGui.so.4
#39 0xb61758b4 in QToolBar::event () from /usr/lib/libQtGui.so.4
#40 0xb5d5d8ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#41 0xb5d660e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#42 0xb687d06d in KApplication::notify () from /usr/lib/libkdeui.so.5
#43 0xb5892e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#44 0xb5d6536e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#45 0xb5dcf656 in ?? () from /usr/lib/libQtGui.so.4
#46 0xb5dce9e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#47 0xb5df87aa in ?? () from /usr/lib/libQtGui.so.4
#48 0xb4c286f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#49 0xb4c2bda3 in ?? () from /usr/lib/libglib-2.0.so.0
#50 0xb4c2bf61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#51 0xb58bd478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#52 0xb5df7ea5 in ?? () from /usr/lib/libQtGui.so.4
#53 0xb589152a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#54 0xb58916ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#55 0xb5893da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#56 0xb5d5d767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#57 0x082f750a in main (argc=5, argv=0xbfd000f4) at /home/cousteau/down/svn/graphics/digikam/digikam/main.cpp:188


###########################
The second time it crashes :
###########################

Application : digiKam (digikam), signal SIGABRT
[Current thread is 0 (LWP 3999)]

Thread 11 (Thread 0xb3151b90 (LWP 4000)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb53aa075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb54a99ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb56ab6f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0x082ce7b9 in Digikam::ScanController::run (this=0x93ba4a0) at /home/cousteau/down/svn/graphics/digikam/digikam/scancontroller.cpp:412
#5  0xb56aa6ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb53a650f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb549b7ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 10 (Thread 0xb1ddfb90 (LWP 4003)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb53aa075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb54a99ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb56ab6f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71068a5 in Digikam::LoadSaveThread::run (this=0x96a40a8) at /home/cousteau/down/svn/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0xb56aa6ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb53a650f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb549b7ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 9 (Thread 0xb2619b90 (LWP 4004)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb53aa075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb54a99ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb56ab6f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71068a5 in Digikam::LoadSaveThread::run (this=0x97a1f78) at /home/cousteau/down/svn/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0xb56aa6ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb53a650f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb549b7ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 8 (Thread 0xaf662b90 (LWP 4005)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb53aa3a2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb54a9a44 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xafefd67f in ?? () from /usr/lib/libxine.so.1

Thread 7 (Thread 0xae9c7b90 (LWP 4006)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb5493c01 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0xaff29580 in xine_usec_sleep () from /usr/lib/libxine.so.1
#3  0x00000000 in ?? ()

Thread 6 (Thread 0xae1c6b90 (LWP 4007)):
#0  0xb4a1154a in clock_gettime () from /lib/tls/i686/cmov/librt.so.1
#1  0xb57c70ab in ?? () from /usr/lib/libQtCore.so.4
#2  0xb57c7281 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb57c8e3c in ?? () from /usr/lib/libQtCore.so.4
#4  0xb57c565a in ?? () from /usr/lib/libQtCore.so.4
#5  0xb4b33602 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#6  0xb4b33a8a in ?? () from /usr/lib/libglib-2.0.so.0
#7  0xb4b33f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#8  0xb57c5497 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#9  0xb579952a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#10 0xb57996ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#11 0xb56a7419 in QThread::exec () from /usr/lib/libQtCore.so.4
#12 0xaff4d512 in ?? () from /usr/lib/kde4/plugins/phonon_backend/phonon_xine.so
#13 0xb56aa6ae in ?? () from /usr/lib/libQtCore.so.4
#14 0xb53a650f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#15 0xb549b7ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 5 (Thread 0xad9a3b90 (LWP 4010)):
#0  0xb5490f69 in poll () from /lib/tls/i686/cmov/libc.so.6
#1  0xaedecf9b in ?? () from /usr/lib/xine/plugins/1.24/xineplug_ao_out_alsa.so
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 4 (Thread 0xad160b90 (LWP 4011)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb53aa075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb54a99ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xaff0f843 in ?? () from /usr/lib/libxine.so.1
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 3 (Thread 0xac06cb90 (LWP 4026)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb53aa075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb54a99ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb56ab6f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb71068a5 in Digikam::LoadSaveThread::run (this=0xba12750) at /home/cousteau/down/svn/graphics/digikam/libs/threadimageio/loadsavethread.cpp:131
#5  0xb56aa6ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb53a650f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb549b7ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xa9fd9b90 (LWP 4032)):
#0  0xb7f07430 in __kernel_vsyscall ()
#1  0xb53aa3a2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb54a9a44 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb56ab6cc in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb56a0886 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb56aa6ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb53a650f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb549b7ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb469f6c0 (LWP 3999)):
[KCrash Handler]
#6  0xb7f07430 in __kernel_vsyscall ()
#7  0xb53e5880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb53e7248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb56a2795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb56a2872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb56a2915 in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb71362c4 in Digikam::DLogoAction::createWidget (this=0xc4098f8, parent=0xc5ce940) at /home/cousteau/down/svn/graphics/digikam/libs/widgets/common/dlogoaction.cpp:160
#13 0xb5cc2b12 in QWidgetAction::requestWidget () from /usr/lib/libQtGui.so.4
#14 0xb6039edf in QMenu::actionEvent () from /usr/lib/libQtGui.so.4
#15 0xb5cbdb2b in QWidget::event () from /usr/lib/libQtGui.so.4
#16 0xb60402e9 in QMenu::event () from /usr/lib/libQtGui.so.4
#17 0xb5c658ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#18 0xb5c6d7fa in QApplication::notify () from /usr/lib/libQtGui.so.4
#19 0xb678506d in KApplication::notify () from /usr/lib/libkdeui.so.5
#20 0xb579ae61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#21 0xb5cb0181 in QWidget::insertAction () from /usr/lib/libQtGui.so.4
#22 0xb5cb02cc in QWidget::addAction () from /usr/lib/libQtGui.so.4
#23 0xb6081916 in QToolBarLayout::layoutActions () from /usr/lib/libQtGui.so.4
#24 0xb6081fdf in QToolBarLayout::setGeometry () from /usr/lib/libQtGui.so.4
#25 0xb5c9322c in QLayoutPrivate::doResize () from /usr/lib/libQtGui.so.4
#26 0xb5c94931 in QLayout::widgetEvent () from /usr/lib/libQtGui.so.4
#27 0xb5c658b7 in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#28 0xb5c6d7fa in QApplication::notify () from /usr/lib/libQtGui.so.4
#29 0xb678506d in KApplication::notify () from /usr/lib/libkdeui.so.5
#30 0xb579ae61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#31 0xb5cf6b6e in QWidgetPrivate::setGeometry_sys () from /usr/lib/libQtGui.so.4
#32 0xb5cb8629 in QWidget::resize () from /usr/lib/libQtGui.so.4
#33 0xb5cb9ba7 in QWidget::setMinimumSize () from /usr/lib/libQtGui.so.4
#34 0xb5c93598 in QLayout::activate () from /usr/lib/libQtGui.so.4
#35 0xb607ccd2 in QToolBar::setOrientation () from /usr/lib/libQtGui.so.4
#36 0xb60121e2 in ?? () from /usr/lib/libQtGui.so.4
#37 0xb6019b3d in ?? () from /usr/lib/libQtGui.so.4
#38 0xb607d206 in ?? () from /usr/lib/libQtGui.so.4
#39 0xb607d8b4 in QToolBar::event () from /usr/lib/libQtGui.so.4
#40 0xb5c658ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#41 0xb5c6e0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#42 0xb678506d in KApplication::notify () from /usr/lib/libkdeui.so.5
#43 0xb579ae61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#44 0xb5c6d36e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#45 0xb5cd7656 in ?? () from /usr/lib/libQtGui.so.4
#46 0xb5cd69e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#47 0xb5d007aa in ?? () from /usr/lib/libQtGui.so.4
#48 0xb4b306f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#49 0xb4b33da3 in ?? () from /usr/lib/libglib-2.0.so.0
#50 0xb4b33f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#51 0xb57c5478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#52 0xb5cffea5 in ?? () from /usr/lib/libQtGui.so.4
#53 0xb579952a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#54 0xb57996ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#55 0xb579bda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#56 0xb5c65767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#57 0x082f750a in main (argc=5, argv=0xbfe06f14) at /home/cousteau/down/svn/graphics/digikam/digikam/main.cpp:188
Comment 1 caulier.gilles 2009-01-29 20:30:52 UTC
MArcel,

Why DLogoAction crash with this assertion :

http://lxr.kde.org/source/extragear/graphics/digikam/libs/widgets/common/dlogoaction.cpp#160

There is no reason for that... This method is already called when toolbar is created... without crash...

Gilles

Comment 2 Andi Clemens 2009-01-29 20:38:41 UTC
Crash only appears when moving to the left or right sidebar. I guess it wants to dock but it can't...

Andi
Comment 3 Marcel Wiesweg 2009-01-29 21:13:35 UTC
SVN commit 918345 by mwiesweg:

Remove assert.
When moving toolbars around Qt inserts action in a form of QMenu, why ever.
(See QToolBarLayout::layoutActions).
This works well as it is now.

BUG: 182334

 M  +1 -6      dlogoaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=918345