Remove assert. When moving toolbars around Qt inserts action in a form of QMenu, why ever. (See QToolBarLayout::layoutActions). This works well as it is now.

BUG: 182334

svn path=/trunk/extragear/graphics/digikam/; revision=918345